ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-05-15 Jochen Manz
	- GUI:
		* Fixed #1255: please commit these patches for an better useful/readable database update files

2008-05-15 Marc Pujol
	- GUI
		* Fixed #1254: Admin level hosting plans are not working

2008-05-13 Benedikt Heintel
	- ENGINE:
		* Fixed #1249: ispcp-dmn-mngr beautifying patch
	- LANGUAGES:
		* Updated Catalan

2008-05-12 Benedikt Heintel
	- ENGINE:
		* Fixed #1244: Use of uninitialized value in concatenation - in file engine/ispcp-htuser-mngr
	- GUI:
		* Fixed #1209: Undefined index: mail_type_forward
		* Fixed #1243: adding mail aborts
	- LANGUAGES:
		* Updated German

2008-05-12 Thomas Wacker
	- GUI:
		* Fixed #1207: new order mail to reseller
		* Fixed #1208: mailer from reseller not working
		* Fixed #1209: Undefined index: mail_type_forward
		* Fixed #1236: Setup Email headers not correct
		* Fixed #1243: adding mail aborts

2008-05-11 Benedikt Heintel
	- ENGINE:
		* Fixed #1242: Method "Fedora" in ispcp-vrl-traff

2008-05-10 Benedikt Heintel
	- CONFIGS:
		* Fixed #1240: dmn_entry.tpl - missing "("
	- CONTRIB:
		* Removed mysql fix for VHCS 2.4.7.1
	- DISTS:
		* Fixed #1215: (Fedora) POP/IMAP traffic is not added in domain statistics with courier and fedora core 8
		* Fixed #1218: (Fedora) Fedora config
		* Fixed #1241: (OpenSuse) opensuse103-packages - one missing package
	- GUI:
		* Added Patch by Thomas Wacker
		* Fixed #1239: Two small graphical glitches in GUI
	- LANGUAGES:
		* Reogranised
		* Added Catalan
		* Changed Chinese

2008-05-09 Benedikt Heintel
	- GUI:
		* Fixed #1220: Several problem with new mail configuration
		* Fixed #1238: Mail management: fordward textarea twice, not working Javascript
	- LANGUAGES:
		* Added Norwegian Norway (Bokmål)
		* Added Portugues Portugal

2008-05-07 Jochen Manz
	- ENGINE:
		* Fixed #1233: Typo in ispcp-mbox-mngr line 1340

2008-05-04 Benedikt Heintel
	- SETUP:
		* Fixed #1230: r1135 bug on clean installation (debian)